--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'The name of your action here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Jira release'
+description: ' Create Release and Update Issues fix version in Jira'
+author: 'Valera Korovelkov'
 
 # Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
@@ -9,15 +9,18 @@ branding:
 
 # Define your inputs here.
 inputs:
-  milliseconds:
-    description: 'Your input description here'
+  release-webhook-url:
+    description: 'Url to create release'
     required: true
-    default: '1000'
-
-# Define your outputs here.
-outputs:
-  time:
-    description: 'Your output description here'
+  issues-webhook-url:
+    description: 'Url to update issues'
+    required: true
+  project-name:
+    description: 'Project name'
+    required: true
+  issue-tag:
+    description: 'Issue tag'
+    required: true
 
 runs:
   using: node20
